--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -41,14 +41,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#portfolio" class="nav__link">
-                                <i class='bx bx-briefcase-alt nav__icon'></i>
-                                <span class="nav__name">Teste</span>
-                            </a>
-                        </li>
-
-                        <li class="nav__item">
-                            <a href="#contactme" class="nav__link">
+                            <a href="/Cotico/perfil.html" class="nav__link">
                                 <i class='bx bx-message-square-detail nav__icon'></i>
                                 <span class="nav__name">Pefil</span>
                             </a>
