--- a/scanner.html
+++ b/scanner.html
@@ -7,21 +7,18 @@
         <title>Cotico</title>
 
         <link rel="stylesheet" href="src/css/scannerstyle.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
-
     </head>
 <body>
-
-    <div class="input-div">
-        <input type="file" accept="image/png, image/jpg, image/jpeg"/>
+    <div class="content">
+        <div class="input-div">
+            <input type="file" accept="image/*" id="input-file" capture/>
+        </div>
+        <img id="img" crossorigin="anonymous"></img>
+        <p id="prediction"></p>
     </div>
-
-    <div id="resultado">
-        <p class="output" id="res"></p>
-    </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script id="imgrecog" src="src/js/scanner.js"></script>
     <script id="replace_with_navbar" src="navbar/navlink.js"></script>
 </body>
