--- a/mapa.html
+++ b/mapa.html
@@ -4,16 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/Cotico/src/css/mapastyle.css">
         <title>Cotico</title>
     </head>
     </head>
     <body>
-        <main>
-            <div class="mapa">
-                <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31911.103446963778!2d-48.56773738264293!3d-1.237376614260391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92a46e2f96517359%3A0x637b767f48cfb843!2sPraia%20Vai%20Quem%20Quer%2C%20Ilha%20de%20Cotijuba!5e0!3m2!1spt-BR!2sbr!4v1683334608621!5m2!1spt-BR!2sbr" 
-                width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <script id="replace_with_navbar" src="navbar/navlink.js"></script>
+        <section>
+            <div class="formulario">
+                <div class="form-value">
+                    <form action="">
+                        <h2>Mapa das Lixeiras</h2>
+                        <main>
+                            <div class="mapa">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31911.091849157405!2d-48.555650307710536!3d-1.2383403119263996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1684003815740!5m2!1spt-BR!2sbr" 
+                                width="450" height="670" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </main>
+                    </form>
+                </div>
             </div>
-        </main>
+        </section>
+        <script id="replace_with_navbar" src="navbar/navlink.js"></script>    
     </body>
 </html>
