--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -4,19 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-        <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="navbar/style.css">
+        <link rel="stylesheet" href="navbar/navstyle.css">
 
         <title>Cotico</title>
     </head>
     <body>
-        <!--=============== HEADER ===============-->
-        <header class="header" id="header">
             <nav class="nav container">
-
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
@@ -43,14 +38,11 @@
                         <li class="nav__item">
                             <a href="/Cotico/perfil.html" class="nav__link">
                                 <i class='bx bx-message-square-detail nav__icon'></i>
-                                <span class="nav__name">Pefil</span>
+                                <span class="nav__name">Perfil</span>
                             </a>
                         </li>
                     </ul>
                 </div>
-
-                <img src="assets/img/perfil.png" alt="" class="nav__img">
             </nav>
-        </header>
     </body>
 </html>
