--- a/perfil.html
+++ b/perfil.html
@@ -7,6 +7,7 @@
     <title>Cotico</title>
 </head>
 <body>
+    <!--faz a boa e monta o perfil como tu preferir que dps eu ajeito-->
     <script id="replace_with_navbar" src="navbar/navlink.js"></script>
 </body>
 </html>
