--- a/pets.html
+++ b/pets.html
@@ -6,71 +6,54 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cotico</title>
 
-        <!-- font awesome cdn link  -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-        <!-- custom css file link  -->
         <link rel="stylesheet" href="src/css/petsstyle.css">
-
-        <!-- custom js file link  -->
-        <script src="src/js/petsjs.js" defer></script>
-
-</head>
-<body>
+        <script src="src/js/pets.js" defer></script>
+   </head>
+   <body>
+         <div class="container">
+            <h3 class="title"> Pets </h3>
+            <div class="pets-container">
+               <div class="pet" data-name="p-1"> <!--aqui indica o slot (pet1)-->
+                     <img src="images/image0_1.png" alt="">
+                     <h3>Capi</h3>  
+                     <div class="raridade">Comum</div>
+               </div>   <!--fim da div! cada um desses eh o quadradinho de um pet-->
+                  <div class="pet" data-name="p-2">
+                     <img src="images/image0_1.png" alt="">
+                     <h3>Capi</h3>
+                     <div class="raridade">Comum</div>
+               </div>
+                  <div class="pet" data-name="p-3">
+                     <img src="images/image0_1.png" alt="">
+                     <h3>Capi</h3>
+                     <div class="raridade">Comum</div>
+               </div>
+            </div>
+         </div>
    
-<div class="container">
-
-   <h3 class="title"> Pets </h3>
-
-   <div class="pets-container">
-
-      <div class="pet" data-name="p-1">
-         <img src="images/image0_1.png" alt="">
-         <h3>MarcosTucano</h3>
-         <div class="raridade">Comum</div>
+         <div class="pets-preview">
+            <div class="preview" data-target="p-1"> <!--aqui indica o slot (pet1) quando tu clica nele-->
+               <i class="fas fa-times"></i>
+               <img src="images/image0_1.png" alt="">
+               <h3>Capi</h3>
+               <p>Mascote do Cotico, a Capi é a queridinha da Ilha!</p>
+            </div> <!--fim da div! mesma coisa de cima, cada um desses eh o quadradinho de um pet quando tu clica nele-->
+            <div class="preview" data-target="p-2">
+               <i class="fas fa-times"></i>
+               <img src="images/image0_1.png" alt="">
+               <h3>Marcos Paulo Virou Um Tucano</h3>
+               <p>Projeto Integrado 2024 ele vai ver só!</p>
+            </div>
+            <div class="preview" data-target="p-3">
+               <i class="fas fa-times"></i>
+               <img src="images/image0_1.png" alt="">
+               <h3>Marcos Paulo Virou Um Tucano</h3>
+               <p>Projeto Integrado 2024 ele vai ver só!</p>
+            </div>
+         </div>
+      <div class="navbarteste">
+         <script id="replace_with_navbar" src="navbar/navlink.js"></script>
       </div>
-
-      <div class="pet" data-name="p-2">
-        <img src="images/image0_1.png" alt="">
-        <h3>MarcosTucano</h3>
-        <div class="raridade">Comum</div>
-     </div>
-
-     <div class="pet" data-name="p-3">
-        <img src="images/image0_1.png" alt="">
-        <h3>MarcosTucano</h3>
-        <div class="raridade">Comum</div>
-     </div>
-
-   </div>
-
-</div>
-
-<div class="pets-preview">
-
-   <div class="preview" data-target="p-1">
-      <i class="fas fa-times"></i>
-      <img src="images/image0_1.png" alt="">
-      <h3>Marcos Paulo Virou Um Tucano</h3>
-      <p>Projeto Integrado 2024 ele vai ver só!</p>
-   </div>
-
-<div class="preview" data-target="p-2">
-    <i class="fas fa-times"></i>
-      <img src="images/image0_1.png" alt="">
-      <h3>Marcos Paulo Virou Um Tucano</h3>
-      <p>Projeto Integrado 2024 ele vai ver só!</p>
-   </div>
-
- <div class="preview" data-target="p-3">
-    <i class="fas fa-times"></i>
-      <img src="images/image0_1.png" alt="">
-      <h3>Marcos Paulo Virou Um Tucano</h3>
-      <p>Projeto Integrado 2024 ele vai ver só!</p>
-   </div>
-</div>
-<main>
-    <script id="replace_with_navbar" src="navbar/navlink.js"></script>
-</main>
-</body>
+   </body>
 </html>
