--- a/scanner.html
+++ b/scanner.html
@@ -9,13 +9,23 @@
         <link rel="stylesheet" href="src/css/scannerstyle.css">
     </head>
 <body>
-    <div class="content">
-        <div class="input-div">
-            <input type="file" accept="image/*" id="input-file" capture/>
+    <section>
+        <div class="formulario">
+            <div class="form-value">
+                <div class="content">
+                    <h2>Reconhecedor de Imagens</h2>
+                    <img id="img" crossorigin="anonymous"></img>
+                    <p id="prediction"></p> <!--aqui eh onde aparece o resultado -->
+                    <img class="input-div"> <!--aqui indica onde a imagem aparece -->
+                        <input type="file" accept="image/*" id="file" capture/>
+                        <label for="file">
+                            <img src="/Cotico/images/cameraCotico.png" alt="Descrição da imagem">
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
-        <img id="img" crossorigin="anonymous"></img>
-        <p id="prediction"></p>
-    </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
