--- a/mapa.html
+++ b/mapa.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Cotico/src/css/mapastyle.css">
+        <link rel="stylesheet" href="./src/css/mapastyle.css">
         <title>Cotico</title>
     </head>
     </head>
@@ -24,6 +24,6 @@
                 </div>
             </div>
         </section>
-        <script id="replace_with_navbar" src="navbar/navlink.js"></script>    
+        <script id="replace_with_navbar" src="./navbar/navlink.js"></script>    
     </body>
 </html>
