--- a/perfil.html
+++ b/perfil.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <!--faz a boa e monta o perfil como tu preferir que dps eu ajeito-->
-    <script id="replace_with_navbar" src="navbar/navlink.js"></script>
+    <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
 </body>
 </html>
