--- a/scanner.html
+++ b/scanner.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cotico</title>
 
-        <link rel="stylesheet" href="src/css/scannerstyle.css">
+        <link rel="stylesheet" href="./src/css/scannerstyle.css">
     </head>
 <body>
     <section>
@@ -19,7 +19,7 @@
                     <img class="input-div"> <!--aqui indica onde a imagem aparece -->
                         <input type="file" accept="image/*" id="file" capture/>
                         <label for="file">
-                            <img src="/Cotico/images/cameraCotico.png" alt="Descrição da imagem">
+                            <img src="./images/cameraCotico.png" alt="Descrição da imagem">
                         </label>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-    <script id="imgrecog" src="src/js/scanner.js"></script>
-    <script id="replace_with_navbar" src="navbar/navlink.js"></script>
+    <script id="imgrecog" src="./src/js/scanner.js"></script>
+    <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
 </body>
 </html>
