--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
-        <link rel="stylesheet" href="navbar/navstyle.css">
+        <link rel="stylesheet" href="./navbar/navstyle.css">
 
         <title>Cotico</title>
     </head>
@@ -15,28 +15,28 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="/Cotico/mapa.html" class="nav__link active-link">
+                            <a href="./mapa.html" class="nav__link active-link">
                                 <i class='bx bx-home-alt nav__icon'></i>
                                 <span class="nav__name">Mapa</span>
                             </a>
                         </li>
                         
                         <li class="nav__item">
-                            <a href="/Cotico/pets.html" class="nav__link">
+                            <a href="./pets.html" class="nav__link">
                                 <i class='bx bx-user nav__icon'></i>
                                 <span class="nav__name">Pets</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="/Cotico/scanner.html" class="nav__link">
+                            <a href="./scanner.html" class="nav__link">
                                 <i class='bx bx-book-alt nav__icon'></i>
                                 <span class="nav__name">Scanner</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="/Cotico/perfil.html" class="nav__link">
+                            <a href="./perfil.html" class="nav__link">
                                 <i class='bx bx-message-square-detail nav__icon'></i>
                                 <span class="nav__name">Perfil</span>
                             </a>
