--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -16,28 +16,28 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="./mapa.html" class="nav__link active-link">
-                                <i class='bx bx-home-alt nav__icon'></i>
+                                <i class='bx bx-map nav__icon'></i>
                                 <span class="nav__name">Mapa</span>
                             </a>
                         </li>
                         
                         <li class="nav__item">
                             <a href="./pets.html" class="nav__link">
-                                <i class='bx bx-user nav__icon'></i>
+                                <i class='bx bx-list-ul bx-flip-vertical nav__icon'></i>
                                 <span class="nav__name">Pets</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
                             <a href="./scanner.html" class="nav__link">
-                                <i class='bx bx-book-alt nav__icon'></i>
+                                <i class='bx bx-scan bx-flip-vertical nav__icon'></i>
                                 <span class="nav__name">Scanner</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
                             <a href="./perfil.html" class="nav__link">
-                                <i class='bx bx-message-square-detail nav__icon'></i>
+                                <i class='bx bxs-user nav__icon'></i>
                                 <span class="nav__name">Perfil</span>
                             </a>
                         </li>
