--- a/scanner.html
+++ b/scanner.html
@@ -19,7 +19,7 @@
                     <img class="input-div"> <!--aqui indica onde a imagem aparece -->
                         <input type="file" accept="image/*" id="file" capture/>
                         <label for="file">
-                            <img src="./images/cameraCotico.png" alt="Descrição da imagem">
+                            <img src="./src/css/images/cameraCotico.png" alt="Descrição da imagem">
                         </label>
                     </div>
                 </div>
