--- a/pets.html
+++ b/pets.html
@@ -15,19 +15,19 @@
             <h3 class="title"> Pets </h3>
             <div class="pets-container">
                <div class="pet" data-name="p-1"> <!--aqui indica o slot (pet1)-->
-                     <img src="./src/css/images/image0_1.png" alt="">
-                     <h3>Capi</h3>  
-                     <div class="raridade">Comum</div>
+                     <img src="./src/css/images/cap1.png" alt="">
+                     <h3>Capinxo</h3>  
+                     <div class="raridade1">Incomum</div>
                </div>   <!--fim da div! cada um desses eh o quadradinho de um pet-->
                   <div class="pet" data-name="p-2">
-                     <img src="./src/css/images/image0_1.png" alt="">
-                     <h3>Capi</h3>
+                     <img src="./src/css/images/bagre1.png" alt="">
+                     <h3>Tampeixe</h3>
                      <div class="raridade">Comum</div>
                </div>
                   <div class="pet" data-name="p-3">
-                     <img src="./src/css/images/image0_1.png" alt="">
-                     <h3>Capi</h3>
-                     <div class="raridade">Comum</div>
+                     <img src="./src/css/images/bagre2.png" alt="">
+                     <h3>Tampimestre</h3>
+                     <div class="raridade2">Raro</div>
                </div>
             </div>
          </div>
@@ -35,19 +35,19 @@
          <div class="pets-preview">
             <div class="preview" data-target="p-1"> <!--aqui indica o slot (pet1) quando tu clica nele-->
                <i class="fas fa-times"></i>
-               <img src="./src/css/images/image0_1.png" alt="">
+               <img src="./src/css/images/cap1.png" alt="">
                <h3>Capi</h3>
-               <p>Mascote do Cotico, a Capi é a queridinha da Ilha!</p>
+               <p>O Capinxo é o queridinho da Ilha!</p>
             </div> <!--fim da div! mesma coisa de cima, cada um desses eh o quadradinho de um pet quando tu clica nele-->
             <div class="preview" data-target="p-2">
                <i class="fas fa-times"></i>
-               <img src="./src/css/images/image0_1.png" alt="">
+               <img src="./src/css/images/bagre1.png" alt="">
                <h3>Marcos Paulo Virou Um Tucano</h3>
                <p>Projeto Integrado 2024 ele vai ver só!</p>
             </div>
             <div class="preview" data-target="p-3">
                <i class="fas fa-times"></i>
-               <img src="./src/css/images/image0_1.png" alt="">
+               <img src="./src/css/images/bagre2.png" alt="">
                <h3>Marcos Paulo Virou Um Tucano</h3>
                <p>Projeto Integrado 2024 ele vai ver só!</p>
             </div>
