--- a/mapa.html
+++ b/mapa.html
@@ -10,10 +10,14 @@
     </head>
     <body>
         <section>
+            <div class="banner">
+                <span class="title">Mapa das Lixeiras</span>
+            </div>
+                
             <div class="formulario">
+                
                 <div class="form-value">
                     <form action="">
-                        <h2>Mapa das Lixeiras</h2>
                         <main>
                             <div class="mapa">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31911.091849157405!2d-48.555650307710536!3d-1.2383403119263996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1684003815740!5m2!1spt-BR!2sbr" 
