--- a/perfil.html
+++ b/perfil.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/perfilstyle.css">
     <title>Cotico</title>
 </head>
 <body>
-    <!--faz a boa e monta o perfil como tu preferir que dps eu ajeito-->
+    <section>
+        <div class="perfil">
+            <div class="card-header">
+                <div class="pic">
+                    <img src="src\css\images\coticologo.png" alt="">
+                </div>
+                <div class="nome">Cotiquinho</div>
+                <div class="rank">Reciclador Mestre</div>
+                <a href="#" class="sair">   
+                    Sair
+                </a>
+            </div>
+            <div class="card-footer">
+                <div class="numeros">
+                    <div class="itens">
+                        <span>20</span>
+                        Itens Recilados
+                    </div>
+                    <div class="border"></div>
+                    <div class="itens">
+                        <span>2</span>
+                        Pets Obtidos
+                    </div>
+                    <div class="border"></div>
+                    <div class="itens">
+                        <span>15</span>
+                        Total de Pontos
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
 </body>
 </html>
