--- a/pets.html
+++ b/pets.html
@@ -25,8 +25,8 @@
                      <div class="raridade">Comum</div>
                </div>
                   <div class="pet" data-name="p-3">
-                     <img src="./src/css/images/bagre2.png" alt="">
-                     <h3>Tampimestre</h3>
+                     <img src="./src/css/images/tampimestreNao.png" alt="">
+                     <h3>???</h3>
                      <div class="raridade2">Raro</div>
                </div>
             </div>
@@ -36,20 +36,23 @@
             <div class="preview" data-target="p-1"> <!--aqui indica o slot (pet1) quando tu clica nele-->
                <i class="fas fa-times"></i>
                <img src="./src/css/images/cap1.png" alt="">
-               <h3>Capi</h3>
+               <h3>Capinxo</h3>
                <p>O Capinxo é o queridinho da Ilha!</p>
+               <p>Progresso = 5/5</p>
             </div> <!--fim da div! mesma coisa de cima, cada um desses eh o quadradinho de um pet quando tu clica nele-->
             <div class="preview" data-target="p-2">
                <i class="fas fa-times"></i>
                <img src="./src/css/images/bagre1.png" alt="">
-               <h3>Marcos Paulo Virou Um Tucano</h3>
-               <p>Projeto Integrado 2024 ele vai ver só!</p>
+               <h3>Tampeixe</h3>
+               <p>Agua dentro da Agua? :O</p>
+               <p>Progresso = 2/2</p>
             </div>
             <div class="preview" data-target="p-3">
                <i class="fas fa-times"></i>
-               <img src="./src/css/images/bagre2.png" alt="">
-               <h3>Marcos Paulo Virou Um Tucano</h3>
-               <p>Projeto Integrado 2024 ele vai ver só!</p>
+               <img src="./src/css/images/tampimestreNao.png" alt="">
+               <h3>???</h3>
+               <p>???</p>
+               <p>Progresso = 8/10</p>
             </div>
          </div>
       <div class="navbarteste">
