--- a/scanner.html
+++ b/scanner.html
@@ -10,9 +10,11 @@
     </head>
 <body>
     <section>
+        <div class="banner">
+            <span class="title">Scanner de Itens</span>
+        </div>
         
         <div class="form-value">
-                    <div class="title">Reconhecedor de Imagens</div>
                     <img id="img"></img>
                     <span class="teste" id="prediction"></span>
                     <img class="input-div">
