--- a/mapa.html
+++ b/mapa.html
@@ -14,17 +14,14 @@
                 <span class="title">Mapa das Lixeiras</span>
             </div>
                 
-            <div class="formulario">
-                
+            <div class="formulario"> 
                 <div class="form-value">
-                    <form action="">
                         <main>
                             <div class="mapa">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31911.091849157405!2d-48.555650307710536!3d-1.2383403119263996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1684003815740!5m2!1spt-BR!2sbr" 
-                                width="350" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                width="100%" height="500" style="border: 4px solid rgba(44, 43, 43, 0.226);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </main>
-                    </form>
                 </div>
             </div>
         </section>
