--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./src/css/images/coticologo.png">
     <link rel="stylesheet" href="./src/css/perfilstyle.css">
     <title>Cotico</title>
 </head>
@@ -14,16 +15,18 @@
                 <div class="pic">
                     <img src="src\css\images\coticologo.png" alt="">
                 </div>
-                <div class="nome">Cotiquinho</div>
+                <div class="nome">Caio</div>
                 <div class="rank">Reciclador Mestre</div>
-                <a href="#" class="sair">   
+                <div class="border2"></div>
+                <p>Quer Fazer uma Viagem a Ilha? Vá com a <a href="https://www.ecorota.com/">EcoRota!</a></p>
+                <a href="./index.html" class="sair">   
                     Sair
                 </a>
             </div>
             <div class="card-footer">
                 <div class="numeros">
                     <div class="itens">
-                        <span>20</span>
+                        <span>6</span>
                         Itens Recilados
                     </div>
                     <div class="border"></div>
@@ -33,7 +36,7 @@
                     </div>
                     <div class="border"></div>
                     <div class="itens">
-                        <span>15</span>
+                        <span>8</span>
                         Total de Pontos
                     </div>
                 </div>
