--- a/pets.html
+++ b/pets.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="src/css/petsstyle.css">
+        <link rel="icon" href="./src/css/images/coticologo.png">
         <script src="./src/js/pets.js" defer></script>
    </head>
    <body>
@@ -44,7 +45,7 @@
                <i class="fas fa-times"></i>
                <img src="./src/css/images/bagre1.png" alt="">
                <h3>Tampeixe</h3>
-               <p>Agua dentro da Agua? :O</p>
+               <p>Melhor do que colecionar tampinhas!</p>
                <p>Progresso = 2/2</p>
             </div>
             <div class="preview" data-target="p-3">
