--- a/lixeira.html
+++ b/lixeira.html
@@ -26,6 +26,9 @@
                     </div>
                     <label id="resultado" for="">
                     </label>
+                    <label for="html5-qrcode-button-camera-permission">
+                        <img class="camera" src="./src/css/images/cameraCotico.png" alt="Descrição da imagem">
+                    </label>
                 </div>
             </div>
         </section>
