--- a/perfil.html
+++ b/perfil.html
@@ -15,7 +15,7 @@
                 <div class="pic">
                     <img src="src\css\images\coticologo.png" alt="">
                 </div>
-                <div class="nome">Caio</div>
+                <div id="nomeU" class="nome">Caio</div>
                 <div class="rank">Reciclador Mestre</div>
                 <div class="border2"></div>
                 <p>Quer Fazer uma Viagem a Ilha? Vá com a <a href="https://www.ecorota.com/">EcoRota!</a></p>
@@ -26,23 +26,24 @@
             <div class="card-footer">
                 <div class="numeros">
                     <div class="itens">
-                        <span>6</span>
+                        <span>8</span>
                         Itens Recilados
                     </div>
                     <div class="border"></div>
                     <div class="itens">
-                        <span>2</span>
+                        <span>4</span>
                         Pets Obtidos
                     </div>
                     <div class="border"></div>
                     <div class="itens">
-                        <span>8</span>
+                        <span>10</span>
                         Total de Pontos
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <script  id="perfil" src="./src/js/perfil.js"></script>
     <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
 </body>
 </html>
