--- a/pets.html
+++ b/pets.html
@@ -26,9 +26,14 @@
                      <div class="raridade">Comum</div>
                </div>
                   <div class="pet" data-name="p-3">
-                     <img src="./src/css/images/tampimestreNao.png" alt="">
-                     <h3>???</h3>
+                     <img src="./src/css/images/bagre2.png" alt="">
+                     <h3>Tampimestre</h3>
                      <div class="raridade2">Raro</div>
+               </div>
+                  <div class="pet" data-name="p-4">
+                     <img src="./src/css/images/tuctuc1.png" alt="">
+                     <h3>Tuctuc</h3>
+                     <div class="raridade3">Lendário</div>
                </div>
             </div>
          </div>
@@ -50,10 +55,17 @@
             </div>
             <div class="preview" data-target="p-3">
                <i class="fas fa-times"></i>
-               <img src="./src/css/images/tampimestreNao.png" alt="">
-               <h3>???</h3>
-               <p>???</p>
-               <p>Progresso = 8/10</p>
+               <img src="./src/css/images/bagre2.png" alt="">
+               <h3>Tampimestre</h3>
+               <p>O Rei dos Rios!</p>
+               <p>Progresso = 10/10</p>
+            </div>
+            <div class="preview" data-target="p-4">
+               <i class="fas fa-times"></i>
+               <img src="./src/css/images/tuctuc1.png" alt="">
+               <h3>Tuctuc</h3>
+               <p>O pet exclusivo da EcoRota!</p>
+               <p>Tenha uma experiencia EcoRota para desbloquear!</p>
             </div>
          </div>
       <div class="navbarteste">
