--- a/pets.html
+++ b/pets.html
@@ -45,6 +45,7 @@
                <h3>Capinxo</h3>
                <p>O Capinxo é o queridinho da Ilha!</p>
                <p>Progresso = 5/5</p>
+                <a class="btn" href="./ra.html">Ver em RA</a>
             </div> <!--fim da div! mesma coisa de cima, cada um desses eh o quadradinho de um pet quando tu clica nele-->
             <div class="preview" data-target="p-2">
                <i class="fas fa-times"></i>
