--- a/ra.html
+++ b/ra.html
@@ -1,33 +1,48 @@
-<<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cotico</title>
-        <link rel="icon" href="./src/css/images/coticologo.png">
-        <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    </head>
-    <body>
-        <section>
-            <div class="banner">
-                <span class="title">Scanner de Itens</span>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cotico</title>
+    <link rel="icon" href="./src/css/images/coticologo.png">
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+</head>
+<body>
+    <section>
+        <div class="banner">
+            <span class="title">Scanner de Itens</span>
+        </div>
 
-            <div class="form-value" style="margin: 0px; overflow: hidden;">
-                <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
-                    <a-assets>
-                        <img id="foto" src="./src/css/images/cap1.png">
-                    </a-assets>
-                    <a-marker preset="hiro">
-                        <a-image width="2" height="2" position="0 0 0" rotation="90 180 0" src="#foto"></a-image>
-                    </a-marker>
+        <div class="form-value" style="margin: 0px; overflow: hidden;">
+            <a-scene vr-mode-ui="enabled: false" embedded arjs="debugUIEnabled: false;">
+                <a-assets>
+                    <img id="foto" src="">
+                </a-assets>
+                <a-marker preset="hiro">
+                    <a-image width="2" height="2" position="0 0 0" rotation="90 180 0" src="#foto"></a-image>
+                </a-marker>
 
-                    <a-entity camera></a-entity>
-                </a-scene>
-            </div>
-        </section>
-        <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
-    </body>
-    </html>>
+                <a-entity camera></a-entity>
+            </a-scene>
+        </div>
+    </section>
+    <script id="replace_with_navbar" src="./navbar/navlink.js"></script>
+    <script>
+        function getQueryParam(param) {
+            let params = new URLSearchParams(window.location.search);
+            return params.get(param);
+        }
+
+        document.addEventListener("DOMContentLoaded", function() {
+            let imgName = getQueryParam('img');
+            if (imgName) {
+                document.getElementById('foto').src = `./src/css/images/${imgName}`;
+            } else {
+                document.getElementById('foto').src = './src/css/images/cap1.png'; // valor padrão
+            }
+        });
+    </script>
+</body>
+</html>
