--- a/pets.html
+++ b/pets.html
@@ -45,7 +45,7 @@
                <h3>Capinxo</h3>
                <p>O Capinxo é o queridinho da Ilha!</p>
                <p>Progresso = 5/5</p>
-                <a class="btn" href="./ra.html">Ver em RA</a>
+               <a class="btn" href="./ra.html?img=cap1.png">Ver em RA</a>
             </div> <!--fim da div! mesma coisa de cima, cada um desses eh o quadradinho de um pet quando tu clica nele-->
             <div class="preview" data-target="p-2">
                <i class="fas fa-times"></i>
@@ -53,6 +53,7 @@
                <h3>Tampeixe</h3>
                <p>Melhor do que colecionar tampinhas!</p>
                <p>Progresso = 2/2</p>
+               <a class="btn" href="./ra.html?img=bagre1.png">Ver em RA</a> 
             </div>
             <div class="preview" data-target="p-3">
                <i class="fas fa-times"></i>
@@ -60,6 +61,7 @@
                <h3>Tampimestre</h3>
                <p>O Rei dos Rios!</p>
                <p>Progresso = 10/10</p>
+               <a class="btn" href="./ra.html?img=bagre2.png">Ver em RA</a> 
             </div>
             <div class="preview" data-target="p-4">
                <i class="fas fa-times"></i>
@@ -67,6 +69,7 @@
                <h3>Tuctuc</h3>
                <p>O pet exclusivo da EcoRota!</p>
                <p>Tenha uma experiencia EcoRota para desbloquear!</p>
+               <a class="btn" href="./ra.html?img=tuctuc1.png">Ver em RA</a>
             </div>
          </div>
       <div class="navbarteste">
