--- a/ra.html
+++ b/ra.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -52,4 +52,4 @@
         });
     </script>
 </body>
-</html>
+</html>>
